# document_scanner

./: .gitignore  README.md  license.txt  pyproject.toml
document_scanner/: hooks.py  modules.txt
document_scanner/public/js/: document_scanner.js
